[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Reinforcement_Learning"
version = "1.0.0"
description = "Coding Reinforcement Learning algorithms from scratch using python and OpenAI Gymnasium"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }

authors = [
    { name = "Muppalla Komal", email = "muppallakomaliitkgp2022@gmail.com" }
]

dependencies = [
    "torch>=2.2",
    "gymnasium>=0.29",
    "gymnasium[classic-control]",
    "gymnasium[box2d]",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "tensorboard>=2.15"
]